# nudge

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  USAGE_MONITORING.md  agents.conf.example  attach.sh  babysit-manager.sh  babysit.py  babysit.sh  capture_fixture.sh  claude  codex  keyboard-2pane.sh  launch-2pane.sh  launch-grid-example.sh  launch.sh  monitor.c  monitor.py  ops.yaml  pyproject.toml  safe-keyboard.sh  safe-launcher.sh  tasks_dispatch.py  test_c.sh  test_monitor.py  test_swarm.py  tmux-send
.aiswarm/: config.yaml
alt/: README.md  bifrost-opinions.md  grok_notes.md  ops.yaml  shared_infra.md  workflow_concept.md
backlog/: config.yml
examples/: launch-2pane.sh  launch-agent-grid.sh  launch-single-pane.sh  swarm-grid.tmuxp.yaml  swarm-grid.yaml  swarm-single.yaml
fixtures/: antigravity_capture.txt  antigravity_transitions.jsonl  claude_capture.txt  claude_states.jsonl  claude_transitions.jsonl  codex_capture.txt  codex_states.jsonl  codex_transitions.jsonl  copilot_capture.txt  copilot_states.jsonl  copilot_transitions.jsonl  gemini_capture.txt  gemini_states.jsonl  gemini_transitions.jsonl  grok_capture.txt  grok_transitions.jsonl  qwen_capture.txt  qwen_states.jsonl  qwen_transitions.jsonl  vibe_capture.txt  vibe_states.jsonl
nudgeswarm/: README.md  nudge.yaml
prompts/: claude_main.md  copilot_tests.md  gemini_review.md
review-requests/: codex-review-TASK-13-14-16.md
scripts/: demo-session.sh
swarm/: QUOTA_TRACKING.md  apply.py  babysit_apply.py  babysitctl.py  cli-quota.py  cli.py  common.py  init.py  instructions.py  tasksctl.py  (+2 more)
(+82 files in other folders)
