[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nudge"
version = "0.1.0"
description = "Composable tmux agent tools with monitor and swarm helpers"
requires-python = ">=3.11"
dependencies = [
  "PyYAML",
]

[project.scripts]
aiswarm = "swarm.cli:main"

[tool.setuptools]
packages = ["swarm"]

[dependency-groups]
dev = [
  "pytest",
]
